fixed spacing for content div and navbar

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,9 +1,10 @@
 img{
-    width: 4rem;
+    width: 3rem;
     height: auto;
 }
 
 .logoDiv{
+    box-sizing: border-box;
     background-color: #424242;
     width: auto;
     height: auto;
