--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,10 @@
 .navbar{
+    box-sizing: border-box;
     width: 100%;
-    height: 100%;
+    height: auto;
     display:flex;
     align-items: center;
-    padding: 0 2em 0 2em;
+    padding: 0 2em;
     box-sizing: border-box;
 }
 
