--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ a, a:hover{
   display:flex;
   flex-direction: column;
   justify-content: center;
-  height:90vh;
+  height:auto;
   align-items: center;
 }
 
